--- a/artwxz/css.css
+++ b/artwxz/css.css
@@ -82,7 +82,7 @@ body {
 	overflow: hidden;
 }
 .bj {
-	background-image: url(/web/20110128121836im_/http://www.artwxz.com/img/bj.gif);
+	background-image: url(/web/20110128121836im_/http://www.artwxz.com/artwxz/img/bj.gif);
 	background-repeat: no-repeat;
 	background-position: right bottom;
 	background-color: #EDD8A9;
@@ -99,7 +99,7 @@ body {
 	border-right-width: 1px;
 	border-right-style: solid;
 	border-right-color: #7E5D3C;
-	background-image: url(/web/20110128121836im_/http://www.artwxz.com/img/cd3.gif);
+	background-image: url(/web/20110128121836im_/http://www.artwxz.com/artwxz/img/cd3.gif);
 	background-repeat: no-repeat;
 	background-position: left bottom;
 }
